kubernetes/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: eatnow
  labels:
    name: eatnow
    monitoring: enabled
