kubernetes/delivery-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deployment
  labels:
    app: delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: med2b/eatnow-delivery
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
