kubernetes/delivery-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
  labels:
    app: delivery-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9002"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: delivery-service
          image: med2b/eat-now-delivery
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9002
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9002
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9002
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  labels:
    app: delivery-service
spec:
  type: ClusterIP
  selector:
    app: delivery-service
  ports:
    - port: 9002
      targetPort: 9002
