kubernetes/menu-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-deployment
  labels:
    app: menu
spec:
  replicas: 2
  selector:
    matchLabels:
      app: menu
  template:
    metadata:
      labels:
        app: menu
    spec:
      containers:
        - name: menu
          image: med2b/eatnow-menu
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: menu-service
spec:
  selector:
    app: menu
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
