kubernetes/menu-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-service
  labels:
    app: menu-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: menu-service
  template:
    metadata:
      labels:
        app: menu-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9000"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: menu-service
          image: med2b/eat-now-menu
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: menu-service
  labels:
    app: menu-service
spec:
  type: ClusterIP
  selector:
    app: menu-service
  ports:
    - port: 9000
      targetPort: 9000
