kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eatnow-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: eatnow.local
      http:
        paths:
          - path: /menu
            pathType: Prefix
            backend:
              service:
                name: menu-service
                port:
                  number: 9000
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9001
          - path: /delivery
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 9002
